--- a/src/pages/camps/summer-camp/index.astro
+++ b/src/pages/camps/summer-camp/index.astro
@@ -1,8 +1,8 @@
 ---
 import BaseLayout from '../../../layouts/BaseLayout.astro';
 import SectionHeader from '../../../components/SectionHeader.astro';
-import CalloutCard from '../../../components/ui/CalloutCard.astro';
-import CampSessionCard from '../../../components/ui/CampSessionCard.astro';
+import CalloutCard from '../../../components/CalloutCard.astro';
+import CampSessionCard from '../../../components/CampSessionCard.astro';
 import { campResources, campContact } from '../../../data/codingCamps';
 import { summer2024Hero, featuredCamps, campTips, partnershipHighlight } from '../../../data/summer2024';
 
