--- a/src/pages/donate/supporters/index.astro
+++ b/src/pages/donate/supporters/index.astro
@@ -1,8 +1,8 @@
 ---
 import BaseLayout from '../../../layouts/BaseLayout.astro';
-import HeroSection from '../../../components/ui/HeroSection.astro';
+import HeroSection from '../../../components/HeroSection.astro';
 import SectionHeader from '../../../components/SectionHeader.astro';
-import CalloutCard from '../../../components/ui/CalloutCard.astro';
+import CalloutCard from '../../../components/CalloutCard.astro';
 import { supportersHero, supporterTiers, gratitudeHighlights } from '../../../data/donate';
 ---
 
