--- a/src/pages/programs/classes/index.astro
+++ b/src/pages/programs/classes/index.astro
@@ -1,9 +1,9 @@
 ---
 import BaseLayout from '../../../layouts/BaseLayout.astro';
 import SectionHeader from '../../../components/SectionHeader.astro';
-import CalloutCard from '../../../components/ui/CalloutCard.astro';
-import ClassTrackCard from '../../../components/ui/ClassTrackCard.astro';
-import LevelCard from '../../../components/ui/LevelCard.astro';
+import CalloutCard from '../../../components/CalloutCard.astro';
+import ClassTrackCard from '../../../components/ClassTrackCard.astro';
+import LevelCard from '../../../components/LevelCard.astro';
 
 const pythonTracks = [
   {
