--- a/src/pages/programs/league-labs/index.astro
+++ b/src/pages/programs/league-labs/index.astro
@@ -2,7 +2,7 @@
 import BaseLayout from '../../../layouts/BaseLayout.astro';
 import SectionHeader from '../../../components/SectionHeader.astro';
 import EmbedLoader from '../../../components/EmbedLoader.astro';
-import CalloutCard from '../../../components/ui/CalloutCard.astro';
+import CalloutCard from '../../../components/CalloutCard.astro';
 import {
   leagueLabsHero,
   leagueLabsOverview,
