--- a/src/pages/programs/tech-club/programming-merit-badge/index.astro
+++ b/src/pages/programs/tech-club/programming-merit-badge/index.astro
@@ -1,7 +1,7 @@
 ---
 import BaseLayout from '../../../../layouts/BaseLayout.astro';
 import SectionHeader from '../../../../components/SectionHeader.astro';
-import CalloutCard from '../../../../components/ui/CalloutCard.astro';
+import CalloutCard from '../../../../components/CalloutCard.astro';
 import { meetupLinks, contactInfo } from '../../../../data/techClub';
 
 const classOptions = [
