--- a/src/pages/camps/index.astro
+++ b/src/pages/camps/index.astro
@@ -1,8 +1,8 @@
 ---
 import BaseLayout from '../../layouts/BaseLayout.astro';
 import SectionHeader from '../../components/SectionHeader.astro';
-import CalloutCard from '../../components/ui/CalloutCard.astro';
-import CampTrackCard from '../../components/ui/CampTrackCard.astro';
+import CalloutCard from '../../components/CalloutCard.astro';
+import CampTrackCard from '../../components/CampTrackCard.astro';
 import {
   codingCampsHero,
   codeArcadeInfo,
