--- a/src/pages/camps/summer-2025/index.astro
+++ b/src/pages/camps/summer-2025/index.astro
@@ -1,10 +1,10 @@
 ---
 import BaseLayout from '../../../layouts/BaseLayout.astro';
 import SectionHeader from '../../../components/SectionHeader.astro';
-import Section from '../../../components/ui/Section.astro';
-import CalloutCard from '../../../components/ui/CalloutCard.astro';
-import CampTrackCard from '../../../components/ui/CampTrackCard.astro';
-import CampSessionCard from '../../../components/ui/CampSessionCard.astro';
+import Section from '../../../components/Section.astro';
+import CalloutCard from '../../../components/CalloutCard.astro';
+import CampTrackCard from '../../../components/CampTrackCard.astro';
+import CampSessionCard from '../../../components/CampSessionCard.astro';
 import { campTracks, campResources, campContact } from '../../../data/codingCamps';
 import {
   summer2025Hero,
