--- a/src/pages/programs/classes/java/index.astro
+++ b/src/pages/programs/classes/java/index.astro
@@ -2,7 +2,7 @@
 import BaseLayout from '../../../../layouts/BaseLayout.astro';
 import SectionHeader from '../../../../components/SectionHeader.astro';
 import PikeWidget from '../../../../components/PikeWidget.astro';
-import CalloutCard from '../../../../components/ui/CalloutCard.astro';
+import CalloutCard from '../../../../components/CalloutCard.astro';
 
 const heroHighlights = [
   'Head start on AP Computer Science and college courses',
