--- a/src/pages/programs/classes/python-vs-java/index.astro
+++ b/src/pages/programs/classes/python-vs-java/index.astro
@@ -1,7 +1,7 @@
 ---
 import BaseLayout from '../../../../layouts/BaseLayout.astro';
 import SectionHeader from '../../../../components/SectionHeader.astro';
-import CalloutCard from '../../../../components/ui/CalloutCard.astro';
+import CalloutCard from '../../../../components/CalloutCard.astro';
 import { siteConfig } from '../../../../config/site';
 
 const address = siteConfig.cv_classroom_address;
