--- a/src/pages/programs/classes/python/index.astro
+++ b/src/pages/programs/classes/python/index.astro
@@ -2,7 +2,7 @@
 import BaseLayout from '../../../../layouts/BaseLayout.astro';
 import SectionHeader from '../../../../components/SectionHeader.astro';
 import PikeWidget from '../../../../components/PikeWidget.astro';
-import CalloutCard from '../../../../components/ui/CalloutCard.astro';
+import CalloutCard from '../../../../components/CalloutCard.astro';
 
 const heroHighlights = [
   'Python is the most popular programming language',
